--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"router": "",
+		"router": "node ./scripts/generateRoutes.js",
 		"build": "vue-tsc -b && vite build",
 		"preview": "vite preview"
 	},
